ft: fix overflow in serach

--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -17,7 +17,7 @@
 }
 
 .nav {
-    margin-left: 25%;
+    margin-left: 15%;
 }
 
 .nav ul {
