--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,11 +1,11 @@
 .search {
     padding: 4% 0;
-    transform: scale(1.5);
 }
 
 input,
 button {
-    margin: 0 2vw;
+    margin: 0 5vw;
+    transform: scale(1.5);
 }
 
 button {
